src/pages/Biology/style.css
.biology-logo {
    font-family:
        var(--technical-font),
        -apple-system,
        BlinkMacSystemFont,
        "Segoe UI",
        Roboto,
        Oxygen,
        Ubuntu,
        Cantarell,
        sans-serif;
    font-weight: 500;
    font-size: 20px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    color: #ffffff;
}

.biology-page {
    overflow: hidden;
}

@media screen and (width <= 390px) {
    .biology-cover-section {
        width: 100%;
        margin-top: auto;
        height: 44rem;
    }

    .upper-block div,
    .lower-block div {
        font-size: 1.25rem !important;
    }

    #bio-content-darvin {
        height: 60%;
    }

    #bio-content-back-upper {
        top: -4%;
        height: 79%;
    }

    #biology-cover-section-subtitle {
        font-size: 0.875rem;
        text-align: center;
        line-height: normal;
        position: relative;
        top: 1rem;
    }

    #bio-back-svg-1 {
        height: 6.25rem;
        left: -2.5rem;
        top: 51%;
        bottom: auto;
        transform: none;
    }

    #bio-back-svg-2 {
        display: none;
    }

    #bio-back-svg-3 {
        top: 26%;
        height: 8.188rem;
        right: 0;
    }

    #bio-back-svg-4 {
        width: 4.938rem;
        height: 4.938rem;
        right: 0.5rem;
        bottom: 28%;
        top: auto;
    }

    .biology-hero-content-text {
        gap: 0.25rem;
    }

    .biology-hero-content-text .upper-block,
    .biology-hero-content-text .lower-block {
        gap: 0.25rem;
    }

    .bio-hero-content-text-svg {
        max-width: 8rem !important;
    }
}

@media screen and (390px < width <= 440px) {
    .biology-cover-section {
        width: 100%;
        margin-top: auto;
        height: 44rem;
    }

    .upper-block div,
    .lower-block div {
        font-size: 1.375rem !important;
    }

    #bio-content-darvin {
        height: 60%;
    }

    #bio-content-back-upper {
        top: -3%;
        height: 74%;
    }

    #biology-cover-section-subtitle {
        font-size: 1.125rem;
        text-align: center;
        line-height: normal;
        position: relative;
        top: 1rem;
    }

    #bio-back-svg-1 {
        height: 7.5rem;
        left: -3.25rem;
        top: 51%;
        bottom: auto;
        transform: none;
    }

    #bio-back-svg-2 {
        display: none;
    }

    #bio-back-svg-3 {
        top: 20%;
        height: 11.438rem;
        right: 0;
    }

    #bio-back-svg-4 {
        width: 4.938rem;
        height: 4.938rem;
        right: 0.5rem;
        bottom: 28%;
        top: auto;
    }

    .biology-hero-content-text {
        top: 17%;
        gap: 0.5rem;
    }

    .biology-hero-content-text .upper-block,
    .biology-hero-content-text .lower-block {
        gap: 0.5rem;
    }

    .bio-hero-content-text-svg {
        max-width: 9.375rem !important;
    }
}

@media screen and (440px < width <= 600px) {
    .biology-cover-section {
        width: 100%;
        margin-top: auto;
        height: 44rem;
    }

    .upper-block div,
    .lower-block div {
        font-size: 1.5rem !important;
    }

    #bio-content-darvin {
        height: 60%;
    }

    #bio-content-back-upper {
        top: -3%;
        height: 78%;
    }

    #biology-cover-section-subtitle {
        font-size: 1.125rem;
        text-align: center;
        line-height: normal;
        position: relative;
        top: 1rem;
    }

    #bio-back-svg-1 {
        height: 9rem;
        left: -3.5rem;
        top: 51.5%;
        bottom: auto;
        transform: none;
    }

    #bio-back-svg-2 {
        display: none;
    }

    #bio-back-svg-3 {
        top: 20%;
        height: 11.438rem;
        right: 0;
    }

    #bio-back-svg-4 {
        width: 7.5rem;
        height: 7.5rem;
        right: 0.5rem;
        bottom: 20%;
        top: auto;
    }

    .biology-hero-content-text {
        gap: 0.5rem;
    }

    .biology-hero-content-text .upper-block,
    .biology-hero-content-text .lower-block {
        gap: 0.5rem;
    }

    .bio-hero-content-text-svg {
        max-width: 11rem !important;
    }
}

@media screen and (800px < width <= 1000px) {
    .biology-cover-section {
        width: 100%;
        margin-top: auto;
        height: 44rem;
    }

    .upper-block div,
    .lower-block div {
        font-size: 2.625rem !important;
    }

    #bio-content-darvin {
        height: 60%;
    }

    #bio-content-back-upper {
        top: -3%;
        height: 87%;
    }

    #biology-cover-section-subtitle {
        font-size: 1.375rem;
        text-align: center;
        line-height: normal;
        position: relative;
        top: 1rem;
    }

    #bio-back-svg-1 {
        height: 10.9rem;
        left: -4rem;
        top: 58%;
        bottom: auto;
        transform: none;
    }

    #bio-back-svg-2 {
        display: none;
    }

    #bio-back-svg-3 {
        top: 3%;
        height: 19.2rem;
        right: 0;
    }

    #bio-back-svg-4 {
        width: 13.266rem;
        height: 13.266rem;
        right: 0.5rem;
        bottom: 8%;
        top: auto;
    }

    .biology-hero-content-text {
        gap: 1rem;
    }

    .biology-hero-content-text .upper-block,
    .biology-hero-content-text .lower-block {
        gap: 1.5rem;
    }

    .bio-hero-content-text-svg {
        max-width: 19rem !important;
    }
}
/* ... */

