fix: Changed width of CoverSection

--- a/src/pages/Biology/style.css
+++ b/src/pages/Biology/style.css
@@ -26,7 +26,7 @@
     .biology-cover-section {
         width: 100%;
         margin-top: auto;
-        height: 44rem;
+        height: 20rem;
     }
 
     .upper-block div,
@@ -64,7 +64,7 @@
     }
 
     #bio-back-svg-3 {
-        top: 26%;
+        top: 5%;
         height: 8.188rem;
         right: 0;
     }
@@ -73,7 +73,7 @@
         width: 4.938rem;
         height: 4.938rem;
         right: 0.5rem;
-        bottom: 28%;
+        bottom: 8%;
         top: auto;
     }
 
@@ -95,7 +95,7 @@
     .biology-cover-section {
         width: 100%;
         margin-top: auto;
-        height: 44rem;
+        height: 24rem;
     }
 
     .upper-block div,
@@ -133,7 +133,7 @@
     }
 
     #bio-back-svg-3 {
-        top: 20%;
+        top: 5%;
         height: 11.438rem;
         right: 0;
     }
@@ -142,7 +142,7 @@
         width: 4.938rem;
         height: 4.938rem;
         right: 0.5rem;
-        bottom: 28%;
+        bottom: 8%;
         top: auto;
     }
 
@@ -165,7 +165,7 @@
     .biology-cover-section {
         width: 100%;
         margin-top: auto;
-        height: 44rem;
+        height: 28rem;
     }
 
     .upper-block div,
@@ -203,7 +203,7 @@
     }
 
     #bio-back-svg-3 {
-        top: 20%;
+        top: 5%;
         height: 11.438rem;
         right: 0;
     }
@@ -212,7 +212,7 @@
         width: 7.5rem;
         height: 7.5rem;
         right: 0.5rem;
-        bottom: 20%;
+        bottom: 5%;
         top: auto;
     }
 
@@ -222,7 +222,7 @@
 
     .biology-hero-content-text .upper-block,
     .biology-hero-content-text .lower-block {
-        gap: 0.5rem;
+        gap: 1.5rem;
     }
 
     .bio-hero-content-text-svg {
@@ -234,7 +234,7 @@
     .biology-cover-section {
         width: 100%;
         margin-top: auto;
-        height: 44rem;
+        height: 36rem;
     }
 
     .upper-block div,
@@ -272,7 +272,7 @@
     }
 
     #bio-back-svg-3 {
-        top: 3%;
+        top: 2%;
         height: 19.2rem;
         right: 0;
     }
@@ -281,7 +281,7 @@
         width: 13.266rem;
         height: 13.266rem;
         right: 0.5rem;
-        bottom: 8%;
+        bottom: 0;
         top: auto;
     }
 
@@ -349,8 +349,8 @@
     #bio-back-svg-4 {
         width: 17.25rem;
         height: 17.25rem;
-        right: 0.5rem;
-        bottom: 4%;
+        right: 0;
+        bottom: 0;
         top: auto;
     }
 
@@ -729,7 +729,7 @@
     .biology-cover-section {
         width: 100%;
         margin-top: auto;
-        height: 44rem;
+        height: 32rem;
     }
 
     .upper-block div,
@@ -767,7 +767,7 @@
     }
 
     #bio-back-svg-3 {
-        top: 13%;
+        top: 5%;
         height: 16rem;
         right: 0;
     }
@@ -776,7 +776,7 @@
         width: 10.205rem;
         height: 10.205rem;
         right: 0.5rem;
-        bottom: 10%;
+        bottom: 0;
         top: auto;
     }
 
